# Estructura

./: README.md  Trabajo Estructura Final.py  app.py  pyproject.toml  pyrightconfig.json  requirements.txt  route_algorithms.py  rutas_Bolivar.csv
static/css/: styles.css
templates/: index.html  temp_map.html  upload.html
uploads/: rutas_Bolivar.csv
